// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Locale switcher component renders English index switcher correctly 1`] = `
<div>
  <a
    class="sc-dkPtyc jHNiIS"
    href="/"
  >
    <span
      class="sc-bdvvaa sc-gsDJrp hQcwYn iJMLxP"
    >
      Suomeksi
    </span>
  </a>
  <br />
  ,
</div>
`;

exports[`Locale switcher component renders Finnish index switcher correctly 1`] = `
<div>
  <a
    class="sc-dkPtyc jHNiIS"
    href="/en"
  >
    <span
      class="sc-bdvvaa sc-gsDJrp hQcwYn iJMLxP"
    >
      In English
    </span>
  </a>
  <br />
  ,
</div>
`;
